# flutter_storm

./: .metadata  LICENSE  README.md  ffigen.yaml  pubspec.yaml
.github/workflows/: build-validation.yml
example/: README.md  pubspec.yaml
example/lib/: feedback.dart  main.dart
example/linux/: CMakeLists.txt  my_application.cc
example/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/test/: widget_test.dart
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
lib/: flutter_storm.dart  flutter_storm_bindings.dart  flutter_storm_bindings_generated.dart  flutter_storm_defines.dart  flutter_storm_method_channel.dart  flutter_storm_platform_interface.dart  flutter_storm_structs.dart  flutter_storm_types.dart
lib/bridge/: errors.dart  flags.dart  mpq.dart
linux/: CMakeLists.txt  flutter_storm_plugin.cc
linux/include/flutter_storm/: flutter_storm_plugin.h
macos/: flutter_storm.podspec
macos/Classes/: FLEStormPlugin.h  FLEStormPlugin.mm  FlutterStormPlugin.swift  flutter_storm.c
src/: CMakeLists.txt  flutter_storm.c
test/: flutter_storm_method_channel_test.dart  flutter_storm_test.dart
windows/: CMakeLists.txt  flutter_storm_plugin.cpp  flutter_storm_plugin.h  flutter_storm_plugin_c_api.cpp
windows/StormLib/: CMakeLists.txt
windows/StormLib/test/: StormTest.cpp
windows/include/flutter_storm/: flutter_storm_plugin_c_api.h
